# Vikey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  debug_log.txt  fix-registration.ps1  test_output.txt  test_output_utf8.txt  test_register.rs
.github/workflows/: ci.yml
crates/vikey-app/: Cargo.toml  build.rs  vikey-app.rc
crates/vikey-app/src/: main.rs
crates/vikey-broker/: Cargo.toml
crates/vikey-broker/src/: ipc_protocol.rs  main.rs  pipe_server.rs
crates/vikey-core/: Cargo.toml
crates/vikey-core/src/: buffer.rs  engine.rs  lib.rs  lookup.rs  processor.rs  registry.rs  spelling.rs  state.rs  traits.rs  transform.rs  types.rs
crates/vikey-core/tests/: integration_tests.rs
crates/vikey-nom/: Cargo.toml
crates/vikey-nom/src/: dictionary.rs  lib.rs  lookup.rs  plugin.rs  types.rs
crates/vikey-nom/src/methods/: mod.rs  telex_nom.rs
crates/vikey-vietnamese/: Cargo.toml  debug_log.txt
crates/vikey-vietnamese/src/: lib.rs  lookup.rs  plugin.rs  rules.rs  syllable.rs  telex.rs  types.rs  unicode.rs  validation.rs  viqr.rs  vni.rs
crates/vikey-vietnamese/src/methods/: mod.rs  telex.rs  telex_v2.rs  viqr.rs  vni.rs
crates/vikey-vietnamese/tests/: cli_telex.rs  debug_tone.rs  smart_telex_test.rs  telex_integration.rs  telex_v2_integration.rs
crates/vikey-windows-tsf/: Cargo.toml  build.rs  vikey_tip.rc
crates/vikey-windows-tsf/src/: com.rs  factory.rs  ipc.rs  key_event_sink.rs  lib.rs  registration.rs  text_ops.rs  text_service.rs
docs/: ARCHITECTURE.md  IDEAS.md  MENU_STRUCTURE.md  README.md  ROADMAP.md  VERSIONING.md
docs/analysis/: architecture-comparison.md  fcitx5-bamboo-analysis.md  openkey-analysis.md  plugin-vs-monorepo.md  scalability-analysis.md  security-deep-dive.md  security-models.md  unikey-analysis.md  user-defined-input-methods.md  wayland-analysis.md
docs/specs/: linux-x11-keysyms.md  macos-quartz-event-services.md  nfc-nfd-analysis.md  rust-ffi-patterns.md  telex-vni-rules.md  vietnamese-unicode.md  windows-hook-api.md
docs/technical/: engine-design.md  input-methods.md  platform-apis.md
examples/: Cargo.toml  basic_usage.rs  demo_ui.rs
references/: README.md
references/unikey/uvconv/: AUTHORS  CREDITS  changes.txt  readme.txt  uvconv.1
references/unikey/uvconv/uvconvert/: Makefile  prehdr.h  uvconvert.cpp
references/unikey/uvconv/vnconv/: Makefile  charset.cpp  convert.cpp
references/unikey/uvconv/vnconv/byteio/: Makefile  byteio.vcproj
