[workspace]
members = [
    "crates/vikey-core",
    "crates/vikey-vietnamese",
    "crates/vikey-platform",
    "crates/vikey-config",
]
resolver = "2"

# Workspace-wide dependencies
[workspace.dependencies]
unicode-normalization = "0.1"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform-specific
[workspace.dependencies.windows]
version = "0.48"
optional = true

[workspace.dependencies.cocoa]
version = "0.25"
optional = true

[workspace.dependencies.core-graphics]
version = "0.23"
optional = true

[workspace.dependencies.x11]
version = "2.21"
features = ["xlib", "xtest"]
optional = true
