[workspace]
members = [
    "crates/vikey-core",
    "crates/vikey-nom",
    "crates/vikey-vietnamese",
    # TODO: Add these when implemented
    # "crates/vikey-platform",
    # "crates/vikey-config",
    "crates/vikey-app",  # Folder name, not package name
    "crates/vikey-windows-tsf",  # Windows TSF DLL
    "crates/vikey-broker",  # Broker service
]
resolver = "2"

# Workspace-wide dependencies
[workspace.dependencies]
unicode-normalization = "0.1"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform-specific dependencies
# Note: These will be optional in individual crates, not at workspace level
windows = "0.48"
cocoa = "0.25"
core-graphics = "0.23"
x11 = { version = "2.21", features = ["xlib", "xtest"] }
