[package]
name = "vikey-broker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vikey-broker"
path = "src/main.rs"

[dependencies]
vikey-core = { path = "../vikey-core" }
vikey-vietnamese = { path = "../vikey-vietnamese" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
